--- a/navbar.css
+++ b/navbar.css
@@ -11,6 +11,7 @@
     font-weight: 200;
     margin-left: 3%;
     background-color: transparent;
+    z-index: 2;
 }
 
 .nav-active {
@@ -31,21 +32,23 @@
     align-items: flex-start;
     margin-top: 50px;
     transition: transform 0.25s ease-in;
+    z-index: 2;
 }
 
 .nav-links li {
     list-style: none;
     opacity: 100%;
     background-color: transparent;
+    z-index: 2;
 }
 
 .nav-links a {
-    color: black;
+    color: yellow;
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
     font-size: 12px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .burger {
@@ -56,6 +59,7 @@
     cursor: pointer;
     margin-right: 3%;
     background-color: transparent;
+    z-index: 2;
 }
 
 .line1 {
